Checking mode select

--- a/data/inner_page/style/wheel.css
+++ b/data/inner_page/style/wheel.css
@@ -119,3 +119,16 @@ input[type="range"] {
     box-shadow: -340px 0 0 320px var(--range-color), inset 0 0 0 3px var(--range-color);
   }
 }
+
+select{
+  height: 40px;
+  width: 80%;
+  background-color: #584b4f;
+  border-radius: 500px;
+  text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 17px;
+  color:  #fff;
+  box-shadow: none;
+}
+
