--- a/data/inner_page/style/style.css
+++ b/data/inner_page/style/style.css
@@ -186,6 +186,42 @@ select > option {
   box-shadow: 0px 0px 20px #54adff;
 }
 
+select{
+  height: 40px;
+  width: 80%;
+  background-color: #584b4f;
+  border-radius: 500px;
+  text-align-last: center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 17px;
+  color:  #fff;
+  box-shadow: none;
+  outline: none;
+}
+
+.settings-block{
+  width: 100%;
+  /* height: ; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 2px solid #584b4f;
+  border-radius: 20px;
+}
+
+#color-settings-box{
+  flex-basis: 60%;
+}
+
+#effect-settings{
+  flex-basis: 17%;
+}
+
+#speed-range{
+  --range-color:#efdab9;
+  /* background-color: #efdab9; */
+}
 
 
 /* ---  END for loading animation --- */
