--- a/data/inner_page/style/style.css
+++ b/data/inner_page/style/style.css
@@ -191,7 +191,7 @@ select{
   width: 80%;
   background-color: #584b4f;
   border-radius: 500px;
-  text-align-last: center;
+  text-align: -webkit-center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 17px;
   color:  #fff;
