--- a/data/style/menu.css
+++ b/data/style/menu.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+#menu-button {
+  display: none;
+}
+
 .menu-wrapper {
   display: flex;
   justify-content: center;
