--- a/data/style/style.css
+++ b/data/style/style.css
@@ -1,24 +1,3 @@
-@font-face {
-  font-family: "SF UI Display";
-  font-weight: 500;
-  src: url(../fonts/SFUIDR.ttf); /* Путь к файлу со шрифтом */
-}
-
-@font-face {
-  font-family: "SF UI Display";
-  font-weight: 200;
-  src: url(../fonts/SFUIDT.ttf); /* Путь к файлу со шрифтом */
-}
-
-@keyframes showBlock {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
 html, body {margin: 0; height: 100%; overflow: hidden}
 
 html {
@@ -60,11 +39,12 @@ p {
 
 #hat{
   /* position: absolute; */
+  display: none;
   top: 0px;
   width: 100%;
   height:8%;
   /* background-color: #584b4f; */
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   /* align-items: center; */
 }
