--- a/data/style/style.css
+++ b/data/style/style.css
@@ -102,68 +102,53 @@ p {
   width: 100%;
 }
 
+.toggle{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+}
+
+.toggle:focus{
+  outline: 0
+}
+
+.toggle{
+  height: 40px;
+  width: 60px;
+  border-radius: 500px;
+  display: inline-block;
+  position: relative;
+  margin: 2%;
+  border: 2px solid #584b4f;
+  background: #584b4f;
+  transition: all .2s ease;
+}
+
+.toggle:after{
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: white;
+    box-shadow: 0 1px 2px rgba(44,44,44,.2);
+    transition: all .2s cubic-bezier(.5,.1,.75,1.35);
+}
+
+.toggle:checked{
+  background: #efdab9;
+}
+.toggle:checked:after{
+  transform: translatex(20px);
+}
+
+
 select {
   -webkit-appearance: none;
-}
-
-select > option {
-  color: rgb(0, 102, 161);
-}
-
-.similar-input {
-  font-family: monospace,monospace;
-  height: 50px;
-  margin: 20px 0;
-  padding: 10px;
-  background: #efeae1;
-  box-sizing: border-box;
-  transition: 0.3s border-color;
-  transition: 0.3s box-shadow;
-
-  border-radius: 3px;
-  border: 0px;
-  border-bottom: 3px solid #fff;
-  outline: none;
-
-  font-style: normal;
-  font-weight: 200;
-  font-size: 24px;
-  line-height: 29px;
-  color: #314567 !important;
-}
-
-#input-forms > .similar-input:hover {
-  border-bottom: 3px solid #0ee6b0;
-}
-
-::-webkit-input-placeholder {
-  color: #9e9e9e;
-  opacity: 1;
-}
-
-#connect {
-  height: 50px;
-  width: 100%;
-  margin: 20px 0;
-  padding: 10px;
-  background: linear-gradient(268.56deg, #2482d9 3.2%, #3f3cb7 93.82%),
-    rgba(28, 134, 205, 0.71);
-  border: 0px solid #a9d6ff;
-  box-sizing: border-box;
-  border-radius: 25px;
-
-  font-style: normal;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 29px;
-  /* identical to box height */
-  color: #e3e3e3;
-  transition: 0.3s border-color;
-  transition: 0.3s box-shadow;
-}
-
-#connect:hover {
-  box-shadow: 0px 0px 20px #54adff;
 }
 
 select{
@@ -186,6 +171,7 @@ select > option {
 
 .settings-block{
   width: 100%;
+  padding: 2%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -199,14 +185,13 @@ select > option {
 }
 
 #effect-settings{
-  flex-basis: 17%;
+  flex-basis: 23%;
 }
 
 #speed-range{
   --range-color:#efdab9;
   /* background-color: #efdab9; */
 }
-
 
 /* ---  END for loading animation --- */
 
