--- a/data/style/style.css
+++ b/data/style/style.css
@@ -1,14 +1,18 @@
-html, body {margin: 0; height: 100%; overflow: hidden}
+html,
+body {
+  margin: 0;
+  height: 100%;
+  overflow: hidden;
+}
 
 html {
   height: 100%;
   width: 100%;
   -webkit-appearance: none;
-  
 }
 
 body {
-  font-family: monospace,monospace;
+  font-family: monospace, monospace;
   -webkit-appearance: none;
   margin: 0;
   height: 100%;
@@ -25,6 +29,10 @@ p {
   margin: 0;
 }
 
+:root {
+  --range-height: 40px;
+}
+
 #wrapper {
   z-index: -1;
   margin: 0px auto;
@@ -37,19 +45,19 @@ p {
   width: 85%;
 }
 
-#hat{
+#hat {
   /* position: absolute; */
   display: none;
   top: 0px;
   width: 100%;
-  height:8%;
+  height: 8%;
   /* background-color: #584b4f; */
   /* display: flex; */
   justify-content: center;
   /* align-items: center; */
 }
 
-#main-name{
+#main-name {
   position: relative;
   top: 30px;
   display: none;
@@ -102,74 +110,100 @@ p {
   width: 100%;
 }
 
-.toggle{
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  -webkit-tap-highlight-color: transparent;
-  cursor: pointer;
+.toggle:focus {
+  outline: 0;
 }
 
-.toggle:focus{
-  outline: 0
+.toggle {
+  position: absolute;
+  max-height: 0;
+  max-width: 0;
+  opacity: 0;
 }
 
-.toggle{
-  height: 40px;
-  width: 60px;
-  border-radius: 500px;
+.toggle + .checkbox-replace {
+  height: var(--range-height);
+  width: calc(var(--range-height) * 1.5);
   display: inline-block;
   position: relative;
-  margin: 2%;
+  border-radius: 500px;
   border: 2px solid #584b4f;
-  background: #584b4f;
-  transition: all .2s ease;
 }
 
-.toggle:after{
-    content: '';
-    position: absolute;
-    top: 2px;
-    left: 2px;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    background: white;
-    box-shadow: 0 1px 2px rgba(44,44,44,.2);
-    transition: all .2s cubic-bezier(.5,.1,.75,1.35);
+/* .toggle + .checkbox_replace:before {
+  content: "";
+  position: absolute;
+  display: block;
+  top: 2px;
+  left: 2px;
+  width: calc(var(--range-height) - 8px);
+  height: calc(var(--range-height) - 8px);
+  border-radius: 50%;
+  background: white;
+  box-shadow: 0 1px 2px rgba(44, 44, 44, 0.2);
+  transition: all 0.2s cubic-bezier(0.5, 0.1, 0.75, 1.35);
+} */
+
+.toggle + .checkbox-replace:before {
+  content: "";
+  position: absolute;
+  display: block;
+  width: calc(var(--range-height) - 4px);
+  height: calc(var(--range-height) - 4px);
+  top: 2px;
+  left: 2px;
+  border-radius: 500px;
+  background: #efdab9;
+  transition: 0.25s ease-in-out;
 }
 
-.toggle:checked{
+.toggle + .checkbox-replace:after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: calc(var(--range-height) - 4px);
+  height: calc(var(--range-height) - 4px);
+  top: 2px;
+  left: 2px;
+  border-radius: 500px;
+  background: white;
+  box-shadow: 0 1px 2px rgba(44, 44, 44, 0.2);
+  transition: 0.25s ease-in-out;
+}
+
+.toggle:checked + .checkbox-replace:before {
+  width: calc(var(--range-height) * 1.5 - 5px);
   background: #efdab9;
 }
-.toggle:checked:after{
-  transform: translatex(20px);
-}
 
+.toggle:checked + .checkbox-replace:after {
+  left: calc(var(--range-height) / 2);
+}
 
 select {
   -webkit-appearance: none;
 }
 
-select{
-  height: 40px;
+select {
+  height: var(--range-height);
   width: 80%;
   background-color: #584b4f;
   border-radius: 500px;
   padding-left: 5%;
   /* text-align: -webkit-center; */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 17px;
-  color:  #fff;
+  color: #fff;
   box-shadow: none;
   outline: none;
 }
 
 select > option {
-  color:gainsboro;
+  color: gainsboro;
 }
 
-.settings-block{
+.settings-block {
   width: 100%;
   padding: 2%;
   display: flex;
@@ -180,17 +214,62 @@ select > option {
   border-radius: 20px;
 }
 
-#color-settings-box{
+#color-settings-box {
   flex-basis: 65%;
 }
 
-#effect-settings{
+#effect-settings {
   flex-basis: 23%;
 }
 
-#speed-range{
-  --range-color:#efdab9;
+#speed-range {
+  --range-color: #efdab9;
   /* background-color: #efdab9; */
+}
+
+input[type="range"] {
+  outline: 0;
+  border: 0;
+  border-radius: 500px;
+  width: 80%;
+  max-width: 100%;
+  /* margin: 24px 0 16px; */
+  transition: box-shadow 0.1s ease-in-out;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio: 0) {
+  input[type="range"] {
+    --range-color: black; /* it is variable! */
+
+    overflow: hidden;
+    /* height: 40px; */
+    -webkit-appearance: none;
+    background-color: #584b4f;
+  }
+  input[type="range"]::-webkit-slider-runnable-track {
+    height: 100%;
+    -webkit-appearance: none;
+    color: #444;
+    transition: box-shadow 0.1s ease-in-out;
+  }
+  input[type="range"]::-webkit-slider-thumb {
+    width: var(--range-height);
+    height: var(--range-height);
+    -webkit-appearance: none;
+    cursor: ew-resize;
+    background: #fff;
+    box-shadow: -340px 0 0 320px var(--range-color),
+      inset 0 0 0 40px var(--range-color);
+    border-radius: 50%;
+    border: 0px solid;
+    transition: box-shadow 0.1s ease-in-out;
+    position: relative;
+  }
+  input[type="range"]:active::-webkit-slider-thumb {
+    background: #fff;
+    box-shadow: -340px 0 0 320px var(--range-color),
+      inset 0 0 0 3px var(--range-color);
+  }
 }
 
 /* ---  END for loading animation --- */
