--- a/data/style/wheel.css
+++ b/data/style/wheel.css
@@ -1,10 +1,12 @@
 #color-wheel-background {
+  --wheel-radius: 70vw;  /* it is variable! */
+
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 70vw;
-  height: 70vw;
+  width: var(--wheel-radius);
+  height: var(--wheel-radius);
   border-radius: 50%;
   background-color: #584b4f;
   /* box-shadow: inset 0px 0px 8px 1px; */
@@ -45,7 +47,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 50%;
+  width: 60%;
 }
 
 .color-item {
@@ -77,46 +79,5 @@
   background-color: #fae410;
 }
 
-input[type="range"] {
-  outline: 0;
-  border: 0;
-  border-radius: 500px;
-  width: 80%;
-  max-width: 100%;
-  /* margin: 24px 0 16px; */
-  transition: box-shadow 0.1s ease-in-out;
-}
 
-@media screen and (-webkit-min-device-pixel-ratio: 0) {
-  input[type="range"] {
-    --range-color: black; /* it is variable! */
-
-    overflow: hidden;
-    height: 40px;
-    -webkit-appearance: none;
-    background-color: #584b4f;
-  }
-  input[type="range"]::-webkit-slider-runnable-track {
-    height: 100%;
-    -webkit-appearance: none;
-    color: #444;
-    transition: box-shadow 0.1s ease-in-out;
-  }
-  input[type="range"]::-webkit-slider-thumb {
-    width: 40px;
-    -webkit-appearance: none;
-    height: 40px;
-    cursor: ew-resize;
-    background: #fff;
-    box-shadow: -340px 0 0 320px var(--range-color), inset 0 0 0 40px var(--range-color);
-    border-radius: 50%;
-    border: 0px solid;
-    transition: box-shadow 0.1s ease-in-out;
-    position: relative;
-  }
-  input[type="range"]:active::-webkit-slider-thumb {
-    background: #fff;
-    box-shadow: -340px 0 0 320px var(--range-color), inset 0 0 0 3px var(--range-color);
-  }
-}
 
